--- a/app/views/web/news/index.html.haml
+++ b/app/views/web/news/index.html.haml
@@ -1,5 +1,9 @@
-- @news.each do |n|
-  %hr
-  = link_to n, news_path(n)
+- @news.each_with_index do |n, i|
+  - unless i == 0
+    %hr
+  %a.b-news{:href => news_path(n)}
+    %h4= n.name
+  .help-block= l n.published_at, :format => :short
+  != truncate_sanitize_rem_br n.body, 300
 
 = paginate @news
