--- a/app/views/web/news/show.html.haml
+++ b/app/views/web/news/show.html.haml
@@ -1,3 +1,4 @@
 %h2= @news.name
-.help-block= l @news.published_at, :format => :short
+- if @news.published_at?
+  .help-block= l @news.published_at, :format => :short
 != @news.body
