--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -31,44 +31,43 @@
       .span4
         %h4 Кто наша аудитория?
         %p Студенты и школьники, желающие работать в сфере ИТ и бегло программирующие хотя бы на одном языке программирования.
-
-        %br
+      .span4
         %h4 Какие проекты будут разрабатываться участниками?
         %p Микро-проекты от ведущих ИТ-компаний Ульяновска.
+
+    .row.landing_lower
       .span4
         %h4 Как мы собираемся это делать?
         %p Определим тестовое задание. Разместим его на сайте. Проведём отбор по его выполнению.
         %p Пригласим на семинар специалистов.
         %p Все дни на семинаре участники с утра до вечера будут заниматься разработкой проектов.
-
-    .row.landing_lower
       .span4
         %h4 За чей счёт?
         %p Для участников мероприятие будет бесплатным.
         %p Проживание, питание, доставка участников до места назначения и обратно будут организованы Департаментом молодёжной политики и Молодёжным инициативным центром.
         %p Каждый участник должен иметь при себе личный ноутбук и желание плодотворно поработать.
+
+    .row.landing_lower
       .span4
         %h4 Зачем это нужно?
         %ul
           %li Создание площадки для самореализации будущих специалистов
           %li Обмен опытом между участниками и действующими специалистами ведущих компании по разработке программного обеспечения г.Ульяновска
           %li Создание «движухи» для молодых программистов Ульяновской области Мероприятие реализуется на общественных началах. В планах сделать Смену Deadline ежегодным мероприятием.
-    .row.landing_lower
-      .span8
+      .span4
         %h4 Что с собой взять?
         %p Каждый участник должен иметь при себе личный ноутбук, желание плодотворно поработать, копию паспорта (свидетельства о рождении), оригинал медицинского полиса.
         %p Все участники обучающей смены должны также сделать прививку от клещевого энцефалита. Если сделать её не успели или не смогли, то необходимо предоставить МИЦ заявление от родителей (для несовершеннолетних) или от себя (для людей старше 18 лет) о том, что ответственность за жизнь и здоровье в связи с клещевым энцефалитом с организаторов снимается.
   - if @news.any?
-    .span3.well
+    .span3
       %h3 Новости
-      - @news.each_with_index do |n, i|
-        - unless i == 0
-          %hr
-        %a.b-news{:href => news_path(n)}
-          %h4= n.name
-        - if n.published_at?
-          .help-block= l n.published_at, :format => :short
-        != truncate_sanitize_rem_br n.body, 200
+      - @news.each do |n|
+        .well
+          %a.b-news{:href => news_path(n)}
+            %h4= n.name
+          - if n.published_at?
+            .help-block= l n.published_at, :format => :short
+          != truncate_sanitize_rem_br n.body, 200
       .news_link= link_to "Все новости", news_index_path
 
 .center.splitter
