--- a/app/views/web/news/index.html.haml
+++ b/app/views/web/news/index.html.haml
@@ -3,7 +3,7 @@
     %a.b-news{:href => news_path(n)}
       %h4= n.name
     - if n.published_at?
-      .help-block= l n.published_at, :format => :short
+      .help-block= l n.published_at, :format => :news
     != truncate_sanitize_rem_br n.body, 300
 
 = paginate @news
