--- a/app/views/web/news/show.html.haml
+++ b/app/views/web/news/show.html.haml
@@ -1,4 +1,4 @@
 %h2= @news.name
 - if @news.published_at?
-  .help-block= l @news.published_at, :format => :short
+  .help-block= l @news.published_at, :format => :news
 != @news.body
