fixed logos show

--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -113,3 +113,8 @@
     .span2
       %a{:href => "http://itmcompany.ru/"}
         = image_tag '10_logo_itm.png'
+.row.landing_bottom
+  .span12
+    .span2
+      %a{:href => "http://interra-group.ru/"}
+        = image_tag 'logo_interra.png'
