--- a/app/views/layouts/web/welcome.html.haml
+++ b/app/views/layouts/web/welcome.html.haml
@@ -2,6 +2,7 @@
 %html(lang="en")
   %head
     = render 'layouts/shared/head'
+    = javascript_include_tag "http://widgets.twimg.com/j/2/widget.js"
   %body
     = render 'layouts/shared/navbar'
 
