--- a/app/views/layouts/web/admin/application.html.haml
+++ b/app/views/layouts/web/admin/application.html.haml
@@ -25,6 +25,7 @@
               %li= link_to t('.members_list'), admin_members_path
               %li= link_to t('.pages_list'), admin_pages_path
               %li= link_to t('.news_list'), admin_news_index_path
+              %li= link_to t('.photo_albums_list'), admin_photo_albums_path
 
     .container
       .content
