--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -28,6 +28,36 @@
 .row
   .span12
     .row.landing_lower
+      .span12
+        - if @news.any?
+          %h3 Новости
+          - @news.each do |n|
+            .well
+              %a.b-news{:href => news_path(n)}
+                %h4= n.name
+              - if n.published_at?
+                .help-block= l n.published_at, :format => :news
+              != truncate_sanitize_rem_br n.body, 250
+          .news_link= link_to "Все новости", news_index_path
+
+.center.splitter
+  = image_tag 'grey_out.png'
+
+.row
+  .span12
+    .row.landing_lower
+      .span8
+        - if @photo_album && @photo_album.photos.any?
+          #carousel.carousel.slide
+            .carousel-inner
+              - @photo_album.photos.each_with_index do |photo, i|
+                .item{:class => i == 0 ? "active" : ''}
+                  = image_tag photo.image_url(:carousel)
+                  - if photo.name?
+                    .carousel-caption
+                      %h4= photo.name
+            %a.carousel-control.left{"data-slide" => "prev", :href => "#carousel"} ‹
+            %a.carousel-control.right{"data-slide" => "next", :href => "#carousel"} ›
       .span4
         :javascript
           new TWTR.Widget({
@@ -36,7 +66,7 @@
             search: 'deadlinecamp',
             interval: 30000,
             subject: 'Новости из Twitter',
-            width: 370,
+            //width: 370,
             height: 450,
             theme: {
               shell: {
@@ -56,17 +86,6 @@
               behavior: 'default'
             }
           }).render().start();
-      .span8
-        - if @news.any?
-          %h3 Новости
-          - @news.each do |n|
-            .well
-              %a.b-news{:href => news_path(n)}
-                %h4= n.name
-              - if n.published_at?
-                .help-block= l n.published_at, :format => :news
-              != truncate_sanitize_rem_br n.body, 250
-          .news_link= link_to "Все новости", news_index_path
 
 .center.splitter
   = image_tag 'grey_out.png'
