added photo albums page

--- a/app/views/web/admin/photo_albums/_photo_fields.html.haml
+++ b/app/views/web/admin/photo_albums/_photo_fields.html.haml
@@ -2,4 +2,6 @@
   .close.mr280
     = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
   = f.input :name
+  = f.input :description
+  = f.input :main
   = f.input :image, :as => :image_preview, :preview_style => :thumb
