--- a/app/views/web/admin/photo_albums/_form.html.haml
+++ b/app/views/web/admin/photo_albums/_form.html.haml
@@ -1,5 +1,6 @@
 = f.input :state_event, :as => :state_event
 = f.input :name
+= f.input :description
 = f.input :mass_photo_loader, :as => :file, :input_html => { :multiple => true }
 %hr
 = f.simple_fields_for :photos do |p|
