--- a/app/views/layouts/shared/_head.html.haml
+++ b/app/views/layouts/shared/_head.html.haml
@@ -6,4 +6,5 @@
 / Le HTML5 shim, for IE6-8 support of HTML elements
 /[if lt IE 9]
   = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+= include_gon
 = stylesheet_link_tag "application", :media => "all"
