--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -79,7 +79,7 @@
           - @photo_album.sorted_photos.each_with_index do |photo, i|
             .item{:class => i == 0 ? "active" : ''}
               = image_tag photo.image_url(:main_carousel)
-              - if photo.name?
+              - if photo.name? || photo.description?
                 .carousel-caption
                   %h4= photo.name
                   %p= photo.description
