--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
 */
 
 .close.mr {
-  margin-right: 510px;
+  margin-right: 700px;
 }
 .ml30 {
   margin-left: 30px;
@@ -66,6 +66,9 @@ footer a:hover, footer .nav li a:hover {
 #topbar_logo {
   margin: -17px 0 -12px;
   border: 1px solid #DDD;
+}
+.center.span6 {
+  margin: 0 auto 0 auto;
 }
 .center img {
   display: block;
