photo album title

--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -106,8 +106,7 @@
   .row
     .span12
       \#3
-      %h4= @photo_album.name
-      %p= @photo_album.description
+      %h4 Фотоальбом с места события
       #carousel3.carousel.slide
         .carousel-inner
           - i = 0
