--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -77,7 +77,7 @@
         .carousel-inner
           - @photo_album.sorted_photos.each_with_index do |photo, i|
             .item{:class => i == 0 ? "active" : ''}
-              = image_tag photo.image_url(:main_carousel)
+              = image_tag photo.image_url(:carousel)
               - if photo.name? || photo.description?
                 .carousel-caption
                   %h4= photo.name
