--- a/app/views/web/welcome/index.ru.html.haml
+++ b/app/views/web/welcome/index.ru.html.haml
@@ -217,3 +217,6 @@
     .span2
       %a{:href => "http://interra-group.ru/"}
         = image_tag 'logo_interra.png'
+    .span2
+      %a{:href => "http://mymediacompany.ru/"}
+        = image_tag 'logo_mmc.png'
