--- a/app/views/web/accounts/_skill_program_lang_fields.html.haml
+++ b/app/views/web/accounts/_skill_program_lang_fields.html.haml
@@ -1,1 +1,7 @@
-= render 'skill_fields', :f => f, :level_collection => Member::Skill::LEVELS
+.control-group.nested-fields
+  .close.mr
+    = link_to_remove_association 'x', f, :class => 'btn btn-danger disabled'
+  = f.association :program_lang, :label => false
+  = f.input :level, :collection => Member::SKILL_LEVELS
+  = f.input :duration
+  = f.input :description, :as => :text_desc
